examples/test/testpolicy1319.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1319
  namespace: namespace90
spec:
  podSelector:
    matchLabels:
      key34: value30
      key0: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value5
          key8: value49
      podSelector:
        matchLabels:
          key42: value45
